a lot of scaffolding for the new ST test harnesses and Serenity nuget

--- a/ripple.config
+++ b/ripple.config
@@ -39,7 +39,13 @@
     <Dependency Name="Owin" Version="1.0.0.0" Mode="Fixed" />
     <Dependency Name="PowerThreading" Version="20120420.0" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="3.6.1" Mode="Fixed" />
+    <Dependency Name="Selenium.RC" Version="2.35.0.0" Mode="Fixed" />
+    <Dependency Name="Selenium.Support" Version="2.35.0.0" Mode="Fixed" />
+    <Dependency Name="Selenium.WebDriver" Version="2.35.0.0" Mode="Fixed" />
+    <Dependency Name="Selenium.WebDriverBackedSelenium" Version="2.35.0.0" Mode="Fixed" />
+    <Dependency Name="Serenity" Version="0.9.8.202" Mode="Float" />
     <Dependency Name="Spark" Version="1.7.5.1" Mode="Fixed" />
+    <Dependency Name="Storyteller2" Version="2.0.0.29" Mode="Float" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
   </Nugets>
