--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -118,6 +118,8 @@
     <Compile Include="Configuration\FubuTransportRegistryTester.cs" />
     <Compile Include="Configuration\FubuTransportTester.cs" />
     <Compile Include="Configuration\HandlerChain_Exception_Handling_Rules_Registration_Tester.cs" />
+    <Compile Include="Configuration\HandlerChainTester.cs" />
+    <Compile Include="Configuration\HandlerGraphTester.cs" />
     <Compile Include="Configuration\UriExtensionsTester.cs" />
     <Compile Include="Diagnostics\MessageRecordTester.cs" />
     <Compile Include="Docs\Basics\ErrorHandlingSamples.cs" />
@@ -141,21 +143,30 @@
     <Compile Include="ErrorHandling\MoveToErrorQueueHandlerTester.cs" />
     <Compile Include="ErrorHandling\MovetoErrorQueueTester.cs" />
     <Compile Include="ErrorHandling\RequeueContinuationTester.cs" />
-    <Compile Include="ErrorHandling\RetryNowContinuationTester.cs" />
     <Compile Include="ErrorHandling\RetryNow_integration_testing.cs" />
+    <Compile Include="ErrorHandling\RetryNowContinuationTester.cs" />
+    <Compile Include="Events\EventAggregatorTester.cs" />
     <Compile Include="Events\ExpiringListenerCleanupTester.cs" />
+    <Compile Include="FakeHandlers.cs" />
+    <Compile Include="FubuTransport_default_options_Tester.cs" />
     <Compile Include="FubuTransportRegistry_application_of_policies_Tester.cs" />
     <Compile Include="FubuTransportRegistry_default_handler_source_policies_spec.cs" />
-    <Compile Include="FubuTransportRegistry_registration_of_services_Tester.cs" />
-    <Compile Include="FubuTransport_default_options_Tester.cs" />
     <Compile Include="FubuTransportRegistry_HandlerSource_registration_Tester.cs" />
+    <Compile Include="FubuTransportRegistry_registration_of_services_Tester.cs" />
+    <Compile Include="FubuTransportServiceRegistry_spec.cs" />
+    <Compile Include="FullStackConfigurationIntegrationTester.cs" />
     <Compile Include="InMemory\Full_end_to_end_delayed_message_processing_with_in_memory_queues.cs" />
     <Compile Include="InMemory\InMemoryCallbackTester.cs" />
+    <Compile Include="InMemory\InMemoryQueueIntegrationTester.cs" />
+    <Compile Include="InMemory\InMemoryReplyQueueIntegratedTester.cs" />
     <Compile Include="InMemory\InMemorySagaRepositoryTester.cs" />
     <Compile Include="InMemory\InMemorySagaStorageTester.cs" />
+    <Compile Include="InMemory\InMemoryTransportTester.cs" />
     <Compile Include="InMemory\ReplayDelayedQueueIntegrationTester.cs" />
     <Compile Include="InMemory\SagaStateCacheTester.cs" />
+    <Compile Include="IntegratedFubuTransportRegistryTester.cs" />
     <Compile Include="Logging\All_log_records_should_be_MessageLogRecord_subtype.cs" />
+    <Compile Include="Logging\EventAggregationListenerTester.cs" />
     <Compile Include="ObjectMother.cs" />
     <Compile Include="Polling\DefaultTimerTester.cs" />
     <Compile Include="Polling\JobRunnerTester.cs" />
@@ -163,57 +174,44 @@
     <Compile Include="Polling\PollingJobIntegrationTester.cs" />
     <Compile Include="Polling\PollingJobTester.cs" />
     <Compile Include="Polling\PollingServicesRegistry_spec.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Publishing\EventPublisherTester.cs" />
     <Compile Include="Publishing\PublishingConfigurationIntegrationTester.cs" />
-    <Compile Include="RecordingServiceBusTester.cs" />
-    <Compile Include="Registration\FuncBuilderTester.cs" />
-    <Compile Include="Registration\Nodes\HandlerCallTester.cs" />
-    <Compile Include="Configuration\HandlerChainTester.cs" />
-    <Compile Include="Configuration\HandlerGraphTester.cs" />
-    <Compile Include="Registration\HandlerSourceTester.cs" />
-    <Compile Include="FakeHandlers.cs" />
-    <Compile Include="InMemory\InMemoryQueueIntegrationTester.cs" />
-    <Compile Include="InMemory\InMemoryTransportTester.cs" />
-    <Compile Include="IntegratedFubuTransportRegistryTester.cs" />
-    <Compile Include="FubuTransportServiceRegistry_spec.cs" />
-    <Compile Include="FullStackConfigurationIntegrationTester.cs" />
-    <Compile Include="Logging\EventAggregationListenerTester.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecordingChannel.cs" />
     <Compile Include="RecordingReceiver.cs" />
+    <Compile Include="RecordingServiceBusTester.cs" />
+    <Compile Include="Registration\FuncBuilderTester.cs" />
+    <Compile Include="Registration\HandlerSourceTester.cs" />
+    <Compile Include="Registration\Nodes\HandlerCallTester.cs" />
     <Compile Include="Runtime\Cascading\DelayedResponseTester.cs" />
     <Compile Include="Runtime\Cascading\OutgoingSenderTester.cs" />
     <Compile Include="Runtime\Cascading\RespondToSenderTester.cs" />
+    <Compile Include="Runtime\Delayed\Delayed_Processing_Job_Registration_Tester.cs" />
+    <Compile Include="Runtime\Delayed\DelayedEnvelopeProcessorTester.cs" />
     <Compile Include="Runtime\EnvelopeModifierTester.cs" />
+    <Compile Include="Runtime\EnvelopeSenderTester.cs" />
+    <Compile Include="Runtime\EnvelopeTester.cs" />
+    <Compile Include="Runtime\generic_handlers_are_called_for_messages_that_match.cs" />
+    <Compile Include="Runtime\Headers\Headers_testing.cs" />
+    <Compile Include="Runtime\Invocation\CascadingHandlerInvokerTester.cs" />
     <Compile Include="Runtime\Invocation\ChainExecutionEnvelopeHandlerTester.cs" />
     <Compile Include="Runtime\Invocation\ChainFailureContinuationTester.cs" />
+    <Compile Include="Runtime\Invocation\ChainInvokerTester.cs" />
     <Compile Include="Runtime\Invocation\ChainSuccessContinuationTester.cs" />
     <Compile Include="Runtime\Invocation\DelayedEnvelopeHandlerTester.cs" />
     <Compile Include="Runtime\Invocation\DeserializationFailureContinuationTester.cs" />
     <Compile Include="Runtime\Invocation\HandlerPipelineTester.cs" />
+    <Compile Include="Runtime\Invocation\handling_a_batch_of_messages.cs" />
+    <Compile Include="Runtime\Invocation\InvocationContext.cs" />
+    <Compile Include="Runtime\Invocation\InvocationContextTester.cs" />
+    <Compile Include="Runtime\Invocation\multiple_handlers_for_one_message.cs" />
     <Compile Include="Runtime\Invocation\NoSubscriberHandlerTester.cs" />
     <Compile Include="Runtime\Invocation\ResponseEnvelopeHandlerTester.cs" />
+    <Compile Include="Runtime\Invocation\SimpleHandlerInvokerTester.cs" />
+    <Compile Include="Runtime\Invocation\simplest_possible_invocation.cs" />
     <Compile Include="Runtime\Invocation\StubServiceFactory.cs" />
-    <Compile Include="Runtime\Invocation\WhenInvokingWithNoHandlerForMessageType.cs" />
     <Compile Include="Runtime\Invocation\when_invoking_a_message_right_now_happy_path.cs" />
-    <Compile Include="Runtime\Serializers\BasicJsonMessageSerializerTester.cs" />
-    <Compile Include="Runtime\Serializers\BinarySerializerTester.cs" />
-    <Compile Include="Runtime\Invocation\CascadingHandlerInvokerTester.cs" />
-    <Compile Include="Runtime\Delayed\DelayedEnvelopeProcessorTester.cs" />
-    <Compile Include="Runtime\Delayed\Delayed_Processing_Job_Registration_Tester.cs" />
-    <Compile Include="Runtime\Invocation\ChainInvokerTester.cs" />
-    <Compile Include="Runtime\SubscriptionsIntegrationTester.cs" />
-    <Compile Include="Runtime\EnvelopeSenderTester.cs" />
-    <Compile Include="Runtime\Serializers\EnvelopeSerializerIntegratedTester.cs" />
-    <Compile Include="Runtime\Serializers\EnvelopeSerializerTester.cs" />
-    <Compile Include="Runtime\EnvelopeTester.cs" />
-    <Compile Include="Events\EventAggregatorTester.cs" />
-    <Compile Include="Runtime\generic_handlers_are_called_for_messages_that_match.cs" />
-    <Compile Include="Runtime\Invocation\handling_a_batch_of_messages.cs" />
-    <Compile Include="Runtime\Headers\Headers_testing.cs" />
-    <Compile Include="InMemory\InMemoryReplyQueueIntegratedTester.cs" />
-    <Compile Include="Runtime\Invocation\multiple_handlers_for_one_message.cs" />
-    <Compile Include="Runtime\Invocation\InvocationContextTester.cs" />
+    <Compile Include="Runtime\Invocation\WhenInvokingWithNoHandlerForMessageType.cs" />
     <Compile Include="Runtime\ReceiverTester.cs" />
     <Compile Include="Runtime\RecordingEnvelopeSender.cs" />
     <Compile Include="Runtime\ReplyListenerTester.cs" />
@@ -221,9 +219,12 @@
     <Compile Include="Runtime\Routing\LambdaRoutingRuleTester.cs" />
     <Compile Include="Runtime\Routing\NamespaceRuleTester.cs" />
     <Compile Include="Runtime\Routing\SingleTypeRoutingRuleTester.cs" />
-    <Compile Include="Runtime\Invocation\simplest_possible_invocation.cs" />
-    <Compile Include="Runtime\Invocation\InvocationContext.cs" />
-    <Compile Include="Runtime\Invocation\SimpleHandlerInvokerTester.cs" />
+    <Compile Include="Runtime\Serializers\BasicJsonMessageSerializerTester.cs" />
+    <Compile Include="Runtime\Serializers\BinarySerializerTester.cs" />
+    <Compile Include="Runtime\Serializers\EnvelopeSerializerIntegratedTester.cs" />
+    <Compile Include="Runtime\Serializers\EnvelopeSerializerTester.cs" />
+    <Compile Include="Runtime\Serializers\XmlMessageSerializerTester.cs" />
+    <Compile Include="Runtime\SubscriptionsIntegrationTester.cs" />
     <Compile Include="Runtime\when_requesting_a_response.cs" />
     <Compile Include="Runtime\when_sending_with_the_expectation_of_a_response.cs" />
     <Compile Include="Runtime\when_starting_the_subscriptions.cs" />
@@ -232,22 +233,15 @@
     <Compile Include="Sagas\SagaTypesTester.cs" />
     <Compile Include="Sagas\StatefulSagaConventionTester.cs" />
     <Compile Include="ScenarioRunner.cs" />
-    <Compile Include="ScenarioSupport\SendAndAwaitStep.cs" />
-    <Compile Include="ScenarioSupport\SourceRecordingHandler.cs" />
     <Compile Include="Scenarios\Request_a_reply_for_a_single_message.cs" />
     <Compile Include="Scenarios\Send_a_message_that_raises_events.cs" />
     <Compile Include="Scenarios\Send_a_single_message_to_multiple_listening_nodes.cs" />
     <Compile Include="Scenarios\Send_a_single_message_to_the_correct_node.cs" />
-    <Compile Include="ScenarioWriterSmokeTester.cs" />
-    <Compile Include="Scheduling\ShutdownChannelNodeVisitorTester.cs" />
-    <Compile Include="Scheduling\StartingChannelNodeVisitorTester.cs" />
-    <Compile Include="Scheduling\TaskSchedulerTester.cs" />
-    <Compile Include="Scheduling\ThreadSchedulerTester.cs" />
-    <Compile Include="ServiceBus_DelaySend_Tester.cs" />
     <Compile Include="ScenarioSupport\AnotherOneHandler.cs" />
     <Compile Include="ScenarioSupport\DifferentOneHandler.cs" />
     <Compile Include="ScenarioSupport\FourHandler.cs" />
     <Compile Include="ScenarioSupport\FourMessage.cs" />
+    <Compile Include="ScenarioSupport\GenericHandler.cs" />
     <Compile Include="ScenarioSupport\HarnessSettings.cs" />
     <Compile Include="ScenarioSupport\IScenarioStep.cs" />
     <Compile Include="ScenarioSupport\ManyResponseHandler.cs" />
@@ -262,17 +256,23 @@
     <Compile Include="ScenarioSupport\RequestReplyStep.cs" />
     <Compile Include="ScenarioSupport\RequestResponseHandler.cs" />
     <Compile Include="ScenarioSupport\Scenario.cs" />
+    <Compile Include="ScenarioSupport\SendAndAwaitStep.cs" />
     <Compile Include="ScenarioSupport\SendMessageStep.cs" />
     <Compile Include="ScenarioSupport\SimpleHandler.cs" />
+    <Compile Include="ScenarioSupport\SourceRecordingHandler.cs" />
     <Compile Include="ScenarioSupport\TestMessageRecorder.cs" />
-    <Compile Include="ScenarioSupport\GenericHandler.cs" />
-    <Compile Include="Runtime\Serializers\XmlMessageSerializerTester.cs" />
-    <Compile Include="ServiceBus_Consume_right_now_Mr_Tester.cs" />
-    <Compile Include="StandinTester.cs" />
     <Compile Include="ScenarioSupport\ThreeHandler.cs" />
     <Compile Include="ScenarioSupport\ThreeMessage.cs" />
     <Compile Include="ScenarioSupport\TwoHandler.cs" />
     <Compile Include="ScenarioSupport\TwoMessage.cs" />
+    <Compile Include="ScenarioWriterSmokeTester.cs" />
+    <Compile Include="Scheduling\ShutdownChannelNodeVisitorTester.cs" />
+    <Compile Include="Scheduling\StartingChannelNodeVisitorTester.cs" />
+    <Compile Include="Scheduling\TaskSchedulerTester.cs" />
+    <Compile Include="Scheduling\ThreadSchedulerTester.cs" />
+    <Compile Include="ServiceBus_Consume_right_now_Mr_Tester.cs" />
+    <Compile Include="ServiceBus_DelaySend_Tester.cs" />
+    <Compile Include="StandinTester.cs" />
     <Compile Include="TestContinuationContext.cs" />
     <Compile Include="TestSupport\MessageWatcherTester.cs" />
     <Compile Include="TransportActivatorTester.cs" />
