--- a/src/FubuTransportation.LightningQueues.Testing/FubuTransportation.LightningQueues.Testing.csproj
+++ b/src/FubuTransportation.LightningQueues.Testing/FubuTransportation.LightningQueues.Testing.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -96,11 +96,11 @@
   <ItemGroup>
     <Compile Include="Full_end_to_end_delayed_message_processing_with_Lightning_Queues.cs" />
     <Compile Include="Full_end_to_end_error_processing_with_LightningQueues.cs" />
-    <Compile Include="PersistentQueueTester.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LightningQueuesIntegrationTester.cs" />
     <Compile Include="LightningQueuesServiceRegistry_spec.cs" />
     <Compile Include="LightningUriTester.cs" />
+    <Compile Include="PersistentQueueTester.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FubuTransportation.LightningQueues\FubuTransportation.LightningQueues.csproj">
