--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -64,23 +64,29 @@
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Async\AsyncChainExecutionContinuation.cs" />
-    <Compile Include="Async\AsyncHandlingNode.cs" />
     <Compile Include="Async\AsyncHandlerInvoker.cs" />
     <Compile Include="Async\AsyncHandling.cs" />
     <Compile Include="Async\AsyncHandlingBehavior.cs" />
     <Compile Include="Async\AsyncHandlingConvention.cs" />
+    <Compile Include="Async\AsyncHandlingNode.cs" />
     <Compile Include="Async\CascadingAsyncHandlerInvoker.cs" />
     <Compile Include="Async\IAsyncHandling.cs" />
     <Compile Include="Configuration\ChannelGraph.cs" />
+    <Compile Include="Configuration\ChannelNode.cs" />
+    <Compile Include="Configuration\FubuTransport.cs" />
+    <Compile Include="Configuration\FubuTransportRegistry.cs" />
+    <Compile Include="Configuration\HandlerChain.cs" />
     <Compile Include="Configuration\HandlerChainPolicy.cs" />
+    <Compile Include="Configuration\HandlerGraph.cs" />
     <Compile Include="Configuration\HandlerPolicies.cs" />
+    <Compile Include="Configuration\IChannelNodeVisitor.cs" />
     <Compile Include="Configuration\PoliciesExpression.cs" />
     <Compile Include="Configuration\UriExtensions.cs" />
-    <Compile Include="Diagnostics\MessageRecordListener.cs" />
     <Compile Include="Diagnostics\IMessagingSession.cs" />
     <Compile Include="Diagnostics\MessageHistory.cs" />
     <Compile Include="Diagnostics\MessageHistoryTableTag.cs" />
     <Compile Include="Diagnostics\MessageRecord.cs" />
+    <Compile Include="Diagnostics\MessageRecordListener.cs" />
     <Compile Include="Diagnostics\MessageRecordNode.cs" />
     <Compile Include="Diagnostics\MessagingSession.cs" />
     <Compile Include="ErrorHandling\Always.cs" />
@@ -98,16 +104,36 @@
     <Compile Include="ErrorHandling\MoveToErrorQueueHandler.cs" />
     <Compile Include="ErrorHandling\RequeueContinuation.cs" />
     <Compile Include="ErrorHandling\RetryNowContinuation.cs" />
+    <Compile Include="EventAggregator.cs" />
     <Compile Include="Events\ExpiringListenerCleanup.cs" />
     <Compile Include="Events\ExpiringListenerExtensions.cs" />
-    <Compile Include="HandlerExtensions.cs" />
+    <Compile Include="Events\IEventAggregator.cs" />
     <Compile Include="Events\IExpiringListener.cs" />
+    <Compile Include="Events\IListener.cs" />
+    <Compile Include="Events\SynchronousEventAggregator.cs" />
+    <Compile Include="FubuTransportationExtensions.cs" />
+    <Compile Include="HandlerExtensions.cs" />
     <Compile Include="InMemory\AllQueuesInMemoryPolicy.cs" />
+    <Compile Include="InMemory\InMemoryChannel.cs" />
+    <Compile Include="InMemory\InMemoryQueue.cs" />
+    <Compile Include="InMemory\InMemoryQueueManager.cs" />
+    <Compile Include="InMemory\InMemorySagaRepository.cs" />
     <Compile Include="InMemory\InMemorySagaStorage.cs" />
+    <Compile Include="InMemory\InMemoryTransport.cs" />
     <Compile Include="InMemory\ISagaStateCache.cs" />
     <Compile Include="InMemory\SagaStateCache.cs" />
+    <Compile Include="IScenarioWriter.cs" />
+    <Compile Include="IServiceBus.cs" />
+    <Compile Include="Logging\ChainExecutionFinished.cs" />
+    <Compile Include="Logging\ChainExecutionStarted.cs" />
     <Compile Include="Logging\EnvelopeContinuationChosen.cs" />
+    <Compile Include="Logging\EnvelopeReceived.cs" />
+    <Compile Include="Logging\EnvelopeSent.cs" />
+    <Compile Include="Logging\EventAggregationListener.cs" />
+    <Compile Include="Logging\MessageFailed.cs" />
     <Compile Include="Logging\MessageLogRecord.cs" />
+    <Compile Include="Logging\MessageSuccessful.cs" />
+    <Compile Include="Logging\NoHandlerForMessage.cs" />
     <Compile Include="Polling\BuiltInPollingJobRegistry.cs" />
     <Compile Include="Polling\DefaultTimer.cs" />
     <Compile Include="Polling\IJob.cs" />
@@ -124,6 +150,7 @@
     <Compile Include="Polling\PollingJobExpression.cs" />
     <Compile Include="Polling\PollingJobFailed.cs" />
     <Compile Include="Polling\PollingJobHandlerSource.cs" />
+    <Compile Include="Polling\PollingJobLogger.cs" />
     <Compile Include="Polling\PollingJobs.cs" />
     <Compile Include="Polling\PollingJobSettings.cs" />
     <Compile Include="Polling\PollingJobStarted.cs" />
@@ -131,6 +158,7 @@
     <Compile Include="Polling\PollingJobSuccess.cs" />
     <Compile Include="Polling\PollingServicesRegistry.cs" />
     <Compile Include="Polling\RegisterPollingJobs.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Publishing\EventPublisher.cs" />
     <Compile Include="Publishing\EventPublisherConvention.cs" />
     <Compile Include="Publishing\EventPublishingActionSource.cs" />
@@ -138,124 +166,96 @@
     <Compile Include="Publishing\PublishEvent.cs" />
     <Compile Include="Publishing\PublishingExtensions.cs" />
     <Compile Include="RecordingServiceBus.cs" />
+    <Compile Include="Registration\ExplicitTypeHandlerSource.cs" />
+    <Compile Include="Registration\FuncBuilder.cs" />
+    <Compile Include="Registration\HandlerSource.cs" />
+    <Compile Include="Registration\IHandlerSource.cs" />
+    <Compile Include="Registration\Nodes\HandlerCall.cs" />
     <Compile Include="Runtime\Acknowledgement.cs" />
     <Compile Include="Runtime\Cascading\DelayedResponse.cs" />
+    <Compile Include="Runtime\Cascading\IOutgoingSender.cs" />
     <Compile Include="Runtime\Cascading\ISendMyself.cs" />
+    <Compile Include="Runtime\Cascading\OutgoingSender.cs" />
     <Compile Include="Runtime\Cascading\RespondToSender.cs" />
     <Compile Include="Runtime\ChannelShutdownDeactivator.cs" />
     <Compile Include="Runtime\Delayed\DelayedEnvelopeAddedBackToQueue.cs" />
     <Compile Include="Runtime\Delayed\DelayedEnvelopeProcessor.cs" />
     <Compile Include="Runtime\Delayed\DelayedEnvelopeReceived.cs" />
-    <Compile Include="Polling\PollingJobLogger.cs" />
     <Compile Include="Runtime\Delayed\DelayedMessageCache.cs" />
+    <Compile Include="Runtime\Envelope.cs" />
     <Compile Include="Runtime\EnvelopeModifier.cs" />
     <Compile Include="Runtime\EnvelopeSender.cs" />
     <Compile Include="Runtime\EnvelopeToken.cs" />
     <Compile Include="Runtime\FailureAcknowledgement.cs" />
+    <Compile Include="Runtime\Headers\DictionaryHeaders.cs" />
+    <Compile Include="Runtime\Headers\IHeaders.cs" />
+    <Compile Include="Runtime\Headers\NameValueHeaders.cs" />
     <Compile Include="Runtime\HeaderWrapper.cs" />
+    <Compile Include="Runtime\IChannel.cs" />
     <Compile Include="Runtime\IEnvelopeModifier.cs" />
+    <Compile Include="Runtime\IEnvelopeSender.cs" />
+    <Compile Include="Runtime\Invocation\Batching\BatchConsumer.cs" />
     <Compile Include="Runtime\Invocation\Batching\BatchMessage.cs" />
     <Compile Include="Runtime\Invocation\Batching\IBatchMessage.cs" />
+    <Compile Include="Runtime\Invocation\CascadingHandlerInvoker.cs" />
     <Compile Include="Runtime\Invocation\ChainExecutionEnvelopeHandler.cs" />
     <Compile Include="Runtime\Invocation\ChainExecutionWatcher.cs" />
     <Compile Include="Runtime\Invocation\ChainFailureContinuation.cs" />
+    <Compile Include="Runtime\Invocation\ChainInvoker.cs" />
     <Compile Include="Runtime\Invocation\ChainSuccessContinuation.cs" />
     <Compile Include="Runtime\Invocation\ContinuationContext.cs" />
     <Compile Include="Runtime\Invocation\DelayedEnvelopeHandler.cs" />
     <Compile Include="Runtime\Invocation\DeserializationFailureContinuation.cs" />
     <Compile Include="Runtime\Invocation\HandlerPipeline.cs" />
+    <Compile Include="Runtime\Invocation\IChainInvoker.cs" />
     <Compile Include="Runtime\Invocation\IContinuation.cs" />
     <Compile Include="Runtime\Invocation\IEnvelopeHandler.cs" />
     <Compile Include="Runtime\Invocation\IHandlerPipeline.cs" />
+    <Compile Include="Runtime\Invocation\IInvocationContext.cs" />
+    <Compile Include="Runtime\Invocation\IMessageCallback.cs" />
     <Compile Include="Runtime\Invocation\IMessageExecutor.cs" />
+    <Compile Include="Runtime\Invocation\InvocationContext.cs" />
     <Compile Include="Runtime\Invocation\MessageExecutor.cs" />
     <Compile Include="Runtime\Invocation\NoHandlerException.cs" />
-    <Compile Include="Runtime\Invocation\SimpleEnvelopeHandler.cs" />
     <Compile Include="Runtime\Invocation\NoSubscriberHandler.cs" />
     <Compile Include="Runtime\Invocation\ResponseEnvelopeHandler.cs" />
-    <Compile Include="Runtime\Cascading\IOutgoingSender.cs" />
-    <Compile Include="Runtime\Cascading\OutgoingSender.cs" />
+    <Compile Include="Runtime\Invocation\SimpleEnvelopeHandler.cs" />
+    <Compile Include="Runtime\Invocation\SimpleHandlerInvoker.cs" />
+    <Compile Include="Runtime\IReceiver.cs" />
+    <Compile Include="Runtime\ISubscriptions.cs" />
+    <Compile Include="Runtime\ITransport.cs" />
+    <Compile Include="Runtime\Receiver.cs" />
+    <Compile Include="Runtime\ReplyListener.cs" />
+    <Compile Include="Runtime\Routing\AssemblyRule.cs" />
+    <Compile Include="Runtime\Routing\IRoutingRule.cs" />
+    <Compile Include="Runtime\Routing\LambdaRoutingRule.cs" />
+    <Compile Include="Runtime\Routing\NamespaceRule.cs" />
+    <Compile Include="Runtime\Routing\SingleTypeRoutingRule.cs" />
+    <Compile Include="Runtime\Serializers\BasicJsonMessageSerializer.cs" />
+    <Compile Include="Runtime\Serializers\BinarySerializer.cs" />
+    <Compile Include="Runtime\Serializers\EnvelopeSerializer.cs" />
+    <Compile Include="Runtime\Serializers\IMessageSerializer.cs" />
+    <Compile Include="Runtime\Serializers\XmlMessageSerializer.cs" />
+    <Compile Include="Runtime\Subscriptions.cs" />
+    <Compile Include="Runtime\TransportActivator.cs" />
+    <Compile Include="Runtime\TransportBase.cs" />
+    <Compile Include="Runtime\UnknownChannelException.cs" />
     <Compile Include="Sagas\ISagaRepository.cs" />
     <Compile Include="Sagas\ISagaStorage.cs" />
     <Compile Include="Sagas\IStatefulSaga.cs" />
-    <Compile Include="Sagas\StatefulSagaNode.cs" />
-    <Compile Include="Registration\ExplicitTypeHandlerSource.cs" />
-    <Compile Include="Configuration\FubuTransport.cs" />
-    <Compile Include="Configuration\FubuTransportRegistry.cs" />
-    <Compile Include="Registration\FuncBuilder.cs" />
-    <Compile Include="Registration\Nodes\HandlerCall.cs" />
-    <Compile Include="Configuration\HandlerChain.cs" />
-    <Compile Include="Configuration\HandlerGraph.cs" />
-    <Compile Include="EventAggregator.cs" />
-    <Compile Include="Registration\HandlerSource.cs" />
-    <Compile Include="Registration\IHandlerSource.cs" />
-    <Compile Include="FubuTransportationExtensions.cs" />
-    <Compile Include="Events\IEventAggregator.cs" />
-    <Compile Include="Events\IListener.cs" />
-    <Compile Include="InMemory\InMemoryQueueManager.cs" />
-    <Compile Include="InMemory\InMemoryChannel.cs" />
-    <Compile Include="InMemory\InMemoryQueue.cs" />
-    <Compile Include="InMemory\InMemoryTransport.cs" />
-    <Compile Include="IScenarioWriter.cs" />
-    <Compile Include="IServiceBus.cs" />
-    <Compile Include="Logging\ChainExecutionFinished.cs" />
-    <Compile Include="Logging\ChainExecutionStarted.cs" />
-    <Compile Include="Logging\EnvelopeReceived.cs" />
-    <Compile Include="Logging\EnvelopeSent.cs" />
-    <Compile Include="Logging\EventAggregationListener.cs" />
-    <Compile Include="Logging\MessageFailed.cs" />
-    <Compile Include="Logging\MessageSuccessful.cs" />
-    <Compile Include="Logging\NoHandlerForMessage.cs" />
-    <Compile Include="InMemory\InMemorySagaRepository.cs" />
-    <Compile Include="Runtime\ReplyListener.cs" />
-    <Compile Include="Runtime\TransportBase.cs" />
     <Compile Include="Sagas\SagaBehavior.cs" />
     <Compile Include="Sagas\SagaRepositoryUnresolvableException.cs" />
     <Compile Include="Sagas\SagaTypes.cs" />
     <Compile Include="Sagas\StatefulSagaConvention.cs" />
-    <Compile Include="Events\SynchronousEventAggregator.cs" />
-    <Compile Include="Configuration\IChannelNodeVisitor.cs" />
+    <Compile Include="Sagas\StatefulSagaNode.cs" />
     <Compile Include="Scheduling\IScheduler.cs" />
     <Compile Include="Scheduling\ShutdownChannelNodeVisitor.cs" />
     <Compile Include="Scheduling\StartingChannelNodeVisitor.cs" />
     <Compile Include="Scheduling\TaskScheduler.cs" />
     <Compile Include="Scheduling\ThreadScheduler.cs" />
     <Compile Include="ServiceBus.cs" />
-    <Compile Include="TestSupport\MessageWatcher.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Runtime\Serializers\BasicJsonMessageSerializer.cs" />
-    <Compile Include="Runtime\Invocation\Batching\BatchConsumer.cs" />
-    <Compile Include="Runtime\Serializers\BinarySerializer.cs" />
-    <Compile Include="Runtime\Invocation\CascadingHandlerInvoker.cs" />
-    <Compile Include="Configuration\ChannelNode.cs" />
-    <Compile Include="Runtime\Subscriptions.cs" />
-    <Compile Include="Runtime\Headers\DictionaryHeaders.cs" />
-    <Compile Include="Runtime\Envelope.cs" />
-    <Compile Include="Runtime\Serializers\EnvelopeSerializer.cs" />
-    <Compile Include="Runtime\Invocation\InvocationContext.cs" />
-    <Compile Include="Runtime\IChannel.cs" />
-    <Compile Include="Runtime\ISubscriptions.cs" />
-    <Compile Include="Runtime\IEnvelopeSender.cs" />
-    <Compile Include="Runtime\Headers\IHeaders.cs" />
-    <Compile Include="Runtime\Invocation\IMessageCallback.cs" />
-    <Compile Include="Runtime\Invocation\IChainInvoker.cs" />
-    <Compile Include="Runtime\Serializers\IMessageSerializer.cs" />
-    <Compile Include="Runtime\Invocation\IInvocationContext.cs" />
-    <Compile Include="Runtime\IReceiver.cs" />
-    <Compile Include="Runtime\ITransport.cs" />
-    <Compile Include="Runtime\Invocation\ChainInvoker.cs" />
-    <Compile Include="Runtime\Headers\NameValueHeaders.cs" />
-    <Compile Include="Runtime\Receiver.cs" />
-    <Compile Include="Runtime\Routing\AssemblyRule.cs" />
-    <Compile Include="Runtime\Routing\IRoutingRule.cs" />
-    <Compile Include="Runtime\Routing\LambdaRoutingRule.cs" />
-    <Compile Include="Runtime\Routing\NamespaceRule.cs" />
-    <Compile Include="Runtime\Routing\SingleTypeRoutingRule.cs" />
-    <Compile Include="Runtime\Invocation\SimpleHandlerInvoker.cs" />
-    <Compile Include="Runtime\UnknownChannelException.cs" />
-    <Compile Include="Runtime\Serializers\XmlMessageSerializer.cs" />
     <Compile Include="StringExtensions.cs" />
-    <Compile Include="Runtime\TransportActivator.cs" />
+    <Compile Include="TestSupport\MessageWatcher.cs" />
     <Compile Include="TransportSettings.cs" />
     <Compile Include="TypeExtensions.cs" />
   </ItemGroup>
