--- a/src/WebsiteNode/ripple.dependencies.config
+++ b/src/WebsiteNode/ripple.dependencies.config
@@ -2,7 +2,6 @@ Bottles
 FubuCore
 FubuLocalization
 FubuMVC.Core
+FubuMVC.StructureMap
 HtmlTags
-LightningQueues
-ManagedEsent
-PowerThreading
+StructureMap
