added the transport cleanup to the test support code

--- a/src/FubuTransportation.Serenity/FubuTransportation.Serenity.csproj
+++ b/src/FubuTransportation.Serenity/FubuTransportation.Serenity.csproj
@@ -95,6 +95,7 @@
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="FubuTransportSystem.cs" />
+    <Compile Include="MessageContextualInfoProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
