--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -112,7 +112,9 @@
     <Compile Include="Events\IListener.cs" />
     <Compile Include="Events\SynchronousEventAggregator.cs" />
     <Compile Include="FubuTransportationExtensions.cs" />
+    <Compile Include="FubuTransportServiceRegistry.cs" />
     <Compile Include="HandlerExtensions.cs" />
+    <Compile Include="ImportHandlers.cs" />
     <Compile Include="InMemory\AllQueuesInMemoryPolicy.cs" />
     <Compile Include="InMemory\InMemoryChannel.cs" />
     <Compile Include="InMemory\InMemoryQueue.cs" />
@@ -256,6 +258,7 @@
     <Compile Include="ServiceBus.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="TestSupport\MessageWatcher.cs" />
+    <Compile Include="TestSupport\TransportCleanup.cs" />
     <Compile Include="TransportSettings.cs" />
     <Compile Include="TypeExtensions.cs" />
   </ItemGroup>
