seeded the SendAndAwait ST tests, better exception on missing or invalid channel configuration. Closes GH-49

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ history.xml
 results.htm
 storyteller.cmd
 run_st.cmd
+Controls
+Core
+External
+Images
+editor.htm
+testEditor.css
+src/FubuTransportation.Storyteller/FubuTransportation.Storyteller-results/
