--- a/src/FubuTransportation.Storyteller/ripple.dependencies.config
+++ b/src/FubuTransportation.Storyteller/ripple.dependencies.config
@@ -2,9 +2,17 @@ Bottles
 FubuCore
 FubuLocalization
 FubuMVC.Core
+FubuMVC.Core.Assets
+FubuMVC.Core.UI
+FubuMVC.Core.View
+FubuMVC.Diagnostics
+FubuMVC.JQueryUI
 FubuMVC.Katana
+FubuMVC.Navigation
 FubuMVC.OwinHost
+FubuMVC.Spark
 FubuMVC.StructureMap
+FubuMVC.TwitterBootstrap
 HtmlTags
 LightningQueues
 ManagedEsent
@@ -14,5 +22,6 @@ Selenium.Support
 Selenium.WebDriver
 Selenium.WebDriverBackedSelenium
 Serenity
+Spark
 Storyteller2
 StructureMap
