checkpoint:  the core AppDomain of serenity testing is correctly reporting out message records

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ Images
 editor.htm
 testEditor.css
 src/FubuTransportation.Storyteller/FubuTransportation.Storyteller-results/
+fubutransportation.esent
+fubutransportation.esent.*
