--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -121,6 +121,7 @@
     <Compile Include="Configuration\HandlerChainTester.cs" />
     <Compile Include="Configuration\HandlerGraphTester.cs" />
     <Compile Include="Configuration\UriExtensionsTester.cs" />
+    <Compile Include="Diagnostics\MessageRecordListenerTester.cs" />
     <Compile Include="Diagnostics\MessageRecordTester.cs" />
     <Compile Include="Docs\Basics\ErrorHandlingSamples.cs" />
     <Compile Include="Docs\Basics\PubSubSamples.cs" />
