--- a/src/ServiceNode/ServiceNode.csproj
+++ b/src/ServiceNode/ServiceNode.csproj
@@ -60,9 +60,13 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ErrorMessage.cs" />
+    <Compile Include="ErrorMessageHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceApplication.cs" />
+    <Compile Include="SimpleHandler.cs" />
     <Compile Include="SimpleMessage.cs" />
+    <Compile Include="SimpleMessageHandler.cs" />
     <Compile Include="TestBusSettings.cs" />
   </ItemGroup>
   <ItemGroup>
