Storyteller end-to-end reply acknowledgement passing

--- a/src/FubuTransportation.LightningQueues/FubuTransportation.LightningQueues.csproj
+++ b/src/FubuTransportation.LightningQueues/FubuTransportation.LightningQueues.csproj
@@ -81,6 +81,7 @@
     <Compile Include="LightningUri.cs" />
     <Compile Include="PersistentQueues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LightningQueuesReplyChannel.cs" />
     <Compile Include="TransactionCallback.cs" />
   </ItemGroup>
   <ItemGroup>
