disregarding polling job activity in message watching, fixed ordering in FubuTransportSystem that was erroring out, started the FubuTransportActFixture

--- a/src/FubuTransportation.Serenity/FubuTransportation.Serenity.csproj
+++ b/src/FubuTransportation.Serenity/FubuTransportation.Serenity.csproj
@@ -94,6 +94,7 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="FubuTransportFixture.cs" />
     <Compile Include="FubuTransportSystem.cs" />
     <Compile Include="MessageContextualInfoProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
