new ST test for batch messages, improved FubuTransportActFixture waiting.  Closes GH-111

--- a/src/FubuTransportation.Storyteller/FubuTransportation.Storyteller.csproj
+++ b/src/FubuTransportation.Storyteller/FubuTransportation.Storyteller.csproj
@@ -132,6 +132,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fixtures\BatchMessageFixture.cs" />
     <Compile Include="Fixtures\SendAndAwaitFixture.cs" />
     <Compile Include="FubuTransportationStorytellerSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
