--- a/src/ServiceNode/ServiceNode.csproj
+++ b/src/ServiceNode/ServiceNode.csproj
@@ -62,12 +62,14 @@
   <ItemGroup>
     <Compile Include="ErrorMessage.cs" />
     <Compile Include="ErrorMessageHandler.cs" />
+    <Compile Include="Messages.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceApplication.cs" />
     <Compile Include="SimpleHandler.cs" />
     <Compile Include="SimpleMessage.cs" />
     <Compile Include="SimpleMessageHandler.cs" />
     <Compile Include="TestBusSettings.cs" />
+    <Compile Include="TextFileWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FubuTransportation.LightningQueues\FubuTransportation.LightningQueues.csproj">
