--- a/src/FubuTransportation.LightningQueues.Testing/FubuTransportation.LightningQueues.Testing.csproj
+++ b/src/FubuTransportation.LightningQueues.Testing/FubuTransportation.LightningQueues.Testing.csproj
@@ -101,6 +101,7 @@
     <Compile Include="LightningUriTester.cs" />
     <Compile Include="PersistentQueueTester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="throws_descriptive_exception_if_no_incoming_lq_channel.cs" />
     <Compile Include="UriExtensionsTester.cs" />
   </ItemGroup>
   <ItemGroup>
